<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HW5" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bHy-Tb-YCd">
                                <rect key="frame" x="16" y="108.33333333333333" width="361" height="34.333333333333329"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zz6-DI-UYJ">
                                        <rect key="frame" x="0.0" y="0.0" width="115" height="34.333333333333336"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="gray" title="New List"/>
                                        <connections>
                                            <action selector="AddNewList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="h7X-7P-EeQ"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="saL-FS-bVT">
                                        <rect key="frame" x="123" y="0.0" width="115" height="34.333333333333336"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="gray" title="New Item"/>
                                        <connections>
                                            <action selector="newItem:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BZK-mT-whi"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqh-eC-lCS">
                                        <rect key="frame" x="246" y="0.0" width="115" height="34.333333333333336"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="gray" title="Add"/>
                                        <connections>
                                            <action selector="AddItem:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RG1-Q8-EK8"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="saL-FS-bVT" firstAttribute="width" secondItem="Zz6-DI-UYJ" secondAttribute="width" id="Cip-o0-eYc"/>
                                </constraints>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="YhT-Dh-dAT">
                                <rect key="frame" x="16" y="159" width="361" height="34"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ey2-zQ-Utr">
                                        <rect key="frame" x="0.0" y="0.0" width="178" height="34"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="gvQ-oc-cl8"/>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="wmH-lc-N5L"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O8K-mf-pRa">
                                        <rect key="frame" x="183" y="0.0" width="178" height="34"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="178" id="4Bd-ab-N2L"/>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="U90-sK-lHQ"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Shopping List" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="245" translatesAutoresizingMaskIntoConstraints="NO" id="Mka-cn-7Af">
                                <rect key="frame" x="61" y="62" width="271" height="38"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="79" translatesAutoresizingMaskIntoConstraints="NO" id="ZGX-ye-c4I">
                                <rect key="frame" x="16" y="197" width="361" height="34"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ef9-Kr-TV3">
                                        <rect key="frame" x="0.0" y="0.0" width="104" height="34"/>
                                        <constraints>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="iNI-Gu-NSL"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nmv-Dw-qJc">
                                        <rect key="frame" x="183" y="0.0" width="178" height="34"/>
                                        <constraints>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="Ikw-3y-W0i"/>
                                            <constraint firstAttribute="width" constant="178" id="jgn-WB-9ac"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="No items" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VHd-NF-UrF">
                                <rect key="frame" x="16" y="247" width="361" height="555"/>
                                <color key="textColor" systemColor="labelColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="VHd-NF-UrF" secondAttribute="bottom" constant="16" id="3QP-nN-SuM"/>
                            <constraint firstItem="bHy-Tb-YCd" firstAttribute="top" secondItem="Mka-cn-7Af" secondAttribute="bottom" constant="8" id="4Hg-Xr-3hm"/>
                            <constraint firstItem="Mka-cn-7Af" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="3" id="4dR-UZ-SA9"/>
                            <constraint firstItem="VHd-NF-UrF" firstAttribute="top" secondItem="ZGX-ye-c4I" secondAttribute="bottom" constant="16" id="CgQ-Kn-MR7"/>
                            <constraint firstItem="ZGX-ye-c4I" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="MdU-hm-Bnu"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VHd-NF-UrF" secondAttribute="trailing" constant="16" id="RSN-4H-Gvn"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bHy-Tb-YCd" secondAttribute="trailing" constant="16" id="Xrb-ow-hTL"/>
                            <constraint firstItem="VHd-NF-UrF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ZUm-ZS-IQ0"/>
                            <constraint firstItem="YhT-Dh-dAT" firstAttribute="top" secondItem="bHy-Tb-YCd" secondAttribute="bottom" constant="16.333333333333343" id="aiG-rP-kZN"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Mka-cn-7Af" secondAttribute="trailing" constant="61" id="b1e-hL-Te7"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YhT-Dh-dAT" secondAttribute="trailing" constant="16" id="dN0-Ta-uH2"/>
                            <constraint firstItem="ZGX-ye-c4I" firstAttribute="top" secondItem="YhT-Dh-dAT" secondAttribute="bottom" constant="4" id="eq6-pr-gIv"/>
                            <constraint firstItem="Mka-cn-7Af" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="61" id="iVR-BH-cX8"/>
                            <constraint firstItem="bHy-Tb-YCd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="mXv-r9-ytN"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZGX-ye-c4I" secondAttribute="trailing" constant="16" id="yOd-P3-5xO"/>
                            <constraint firstItem="YhT-Dh-dAT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="znN-rz-chx"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="QuantityText" destination="nmv-Dw-qJc" id="7eh-bn-T8e"/>
                        <outlet property="descriptionText" destination="O8K-mf-pRa" id="299-G5-kbk"/>
                        <outlet property="listdata" destination="VHd-NF-UrF" id="sPi-L8-MAw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="101.5267175572519" y="3.5211267605633805"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="labelColor">
            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
